--- a/olist/brazil_sales_marketplace_olist.ipynb
+++ b/olist/brazil_sales_marketplace_olist.ipynb
@@ -48,7 +48,8 @@
    "metadata": {},
    "source": [
     "## Notebook objective\n",
-    "* Creating a dataframe with state, product category, sum of all sales of each product and mean population of each state"
+    "* Creating a dataframe with state, product category, sum of all sales of each product and mean population of each state\n",
+    "* Creating a dataframe with all orders, state, product_category_name and after creating another dataframe to correlate profit with population of each state"
    ]
   },
   {
@@ -94,6 +95,18 @@
     "items = pd.read_csv('datasets/olist_order_items_dataset.csv')\n",
     "orders = pd.read_csv('datasets/olist_orders_dataset.csv')\n",
     "products = pd.read_csv('datasets/olist_products_dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bee31bd",
+   "metadata": {},
+   "source": [
+    "# Dataset option 1\n",
+    "\n",
+    "* state, product_category_name, total_sales_price, mean_pop\n",
+    "\n",
+    "* obs: total_sales_price is the sum of all sales for a specific state\n"
    ]
   },
   {
@@ -1203,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "690dfdca",
    "metadata": {},
    "outputs": [
@@ -1296,7 +1309,7 @@
        "4                     13056               campinas             SP  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2084,7 +2097,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "population = pd.read_excel('dataset/population.xlsx')\n",
+    "population = pd.read_excel('datasets/population.xlsx')\n",
     "\n",
     "#Removing spaces in state column\n",
     "population.state = population.state.str.replace(' ', '')"
@@ -2222,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "id": "f33ddf57",
    "metadata": {},
    "outputs": [
@@ -2353,7 +2366,7 @@
        "[1362 rows x 4 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2382,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "id": "d8224007",
    "metadata": {},
    "outputs": [
@@ -2582,13 +2595,585 @@
        "939     RJ           esporte_lazer          121964.62  12434319"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "final_dataset.sort_values('total_sales_price', ascending = False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7b9713f",
+   "metadata": {},
+   "source": [
+    "## Number of nodes and links estimation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "98b9b75c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of states: 27\n",
+      "Number of product_category_name: 73\n",
+      "Number of nodes: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nodes = Unique states + Unique product_category_name\n",
+    "\n",
+    "print('Number of states:', len(final_dataset.state.unique()))\n",
+    "print('Number of product_category_name:', len(final_dataset.product_category_name.unique()))\n",
+    "print('Number of nodes:', 27 + 73)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3179b002",
+   "metadata": {},
+   "source": [
+    "# Links\n",
+    "Sum of all product_category_name for all states"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "63c2e718",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of links: 1362\n"
+     ]
+    }
+   ],
+   "source": [
+    "grouped = final_dataset.groupby(['state'])['product_category_name'].count().to_frame()\n",
+    "\n",
+    "print('Number of links:', grouped.product_category_name.sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca2bf540",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb8a31fb",
+   "metadata": {},
+   "source": [
+    "# Dataset option 2\n",
+    "\n",
+    "* order_id, state, product_category_name, price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "c7938454",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>e481f51cbdc54678b7cc49136f2d6af7</td>\n",
+       "      <td>9ef432eb6251297304e76186b10a928d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>53cdb2fc8bc7dce0b6741e2150273451</td>\n",
+       "      <td>b0830fb4747a6c6d20dea0b8c802d7ef</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>47770eb9100c2d0c44946d9cf07ec65d</td>\n",
+       "      <td>41ce2a54c0b03bf3443c3d931a367089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>949d5b44dbf5de918fe9c16f97b45f8a</td>\n",
+       "      <td>f88197465ea7920adcdbec7375364d82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ad21c59c0840e6cb83a9ceb5573f8159</td>\n",
+       "      <td>8ab97904e6daea8866dbdbc4fb7aad2c</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           order_id                       customer_id\n",
+       "0  e481f51cbdc54678b7cc49136f2d6af7  9ef432eb6251297304e76186b10a928d\n",
+       "1  53cdb2fc8bc7dce0b6741e2150273451  b0830fb4747a6c6d20dea0b8c802d7ef\n",
+       "2  47770eb9100c2d0c44946d9cf07ec65d  41ce2a54c0b03bf3443c3d931a367089\n",
+       "3  949d5b44dbf5de918fe9c16f97b45f8a  f88197465ea7920adcdbec7375364d82\n",
+       "4  ad21c59c0840e6cb83a9ceb5573f8159  8ab97904e6daea8866dbdbc4fb7aad2c"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "29ac3404",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00010242fe8c5a6d1ba2dd792cb16214</td>\n",
+       "      <td>4244733e06e7ecb4970a6e2683c13e61</td>\n",
+       "      <td>58.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00018f77f2f0320c557190d7a144bdd3</td>\n",
+       "      <td>e5f2d52b802189ee658865ca93d83a8f</td>\n",
+       "      <td>239.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000229ec398224ef6ca0657da4fc703e</td>\n",
+       "      <td>c777355d18b72b67abbeef9df44fd0fd</td>\n",
+       "      <td>199.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00024acbcdf0a6daa1e931b038114c75</td>\n",
+       "      <td>7634da152a4610f1595efa32f14722fc</td>\n",
+       "      <td>12.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00042b26cf59d7ce69dfabb4e55b4fd9</td>\n",
+       "      <td>ac6c3623068f30de03045865e4e10089</td>\n",
+       "      <td>199.90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           order_id                        product_id   price\n",
+       "0  00010242fe8c5a6d1ba2dd792cb16214  4244733e06e7ecb4970a6e2683c13e61   58.90\n",
+       "1  00018f77f2f0320c557190d7a144bdd3  e5f2d52b802189ee658865ca93d83a8f  239.90\n",
+       "2  000229ec398224ef6ca0657da4fc703e  c777355d18b72b67abbeef9df44fd0fd  199.00\n",
+       "3  00024acbcdf0a6daa1e931b038114c75  7634da152a4610f1595efa32f14722fc   12.99\n",
+       "4  00042b26cf59d7ce69dfabb4e55b4fd9  ac6c3623068f30de03045865e4e10089  199.90"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "11f23fe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>product_category_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1e9e8ef04dbcff4541ed26657ea517e5</td>\n",
+       "      <td>perfumaria</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3aa071139cb16b67ca9e5dea641aaa2f</td>\n",
+       "      <td>artes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>96bd76ec8810374ed1b65e291975717f</td>\n",
+       "      <td>esporte_lazer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cef67bcfe19066a932b7673e239eb23d</td>\n",
+       "      <td>bebes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9dc1a7de274444849c219cff195d0b71</td>\n",
+       "      <td>utilidades_domesticas</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         product_id  product_category_name\n",
+       "0  1e9e8ef04dbcff4541ed26657ea517e5             perfumaria\n",
+       "1  3aa071139cb16b67ca9e5dea641aaa2f                  artes\n",
+       "2  96bd76ec8810374ed1b65e291975717f          esporte_lazer\n",
+       "3  cef67bcfe19066a932b7673e239eb23d                  bebes\n",
+       "4  9dc1a7de274444849c219cff195d0b71  utilidades_domesticas"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "products.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8311f14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>customer_city</th>\n",
+       "      <th>customer_state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>06b8999e2fba1a1fbc88172c00ba8bc7</td>\n",
+       "      <td>franca</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18955e83d337fd6b2def6b18a428ac77</td>\n",
+       "      <td>sao bernardo do campo</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4e7b3e00288586ebd08712fdd0374a03</td>\n",
+       "      <td>sao paulo</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>b2b6027bc5c5109e529d4dc6358b12c3</td>\n",
+       "      <td>mogi das cruzes</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4f2d8ab171c80ec8364f7c12e35b23ad</td>\n",
+       "      <td>campinas</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        customer_id          customer_city customer_state\n",
+       "0  06b8999e2fba1a1fbc88172c00ba8bc7                 franca             SP\n",
+       "1  18955e83d337fd6b2def6b18a428ac77  sao bernardo do campo             SP\n",
+       "2  4e7b3e00288586ebd08712fdd0374a03              sao paulo             SP\n",
+       "3  b2b6027bc5c5109e529d4dc6358b12c3        mogi das cruzes             SP\n",
+       "4  4f2d8ab171c80ec8364f7c12e35b23ad               campinas             SP"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f621f521",
+   "metadata": {},
+   "source": [
+    "## Merge orders and items on order_id\n",
+    "return: order_id, customer_id,  product_id, price\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09a9aab2",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "orders_product = orders.merge(items, how = 'left', on = 'order_id')\n",
+    "orders_product.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1d9f1db",
+   "metadata": {},
+   "source": [
+    "## Merge orders_product and products on product_id\n",
+    "return order_id, customer_id, product_id, price, product_category_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20c8ec90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders_product_category = orders_product.merge(products, how = 'left', on = 'product_id')\n",
+    "orders_product_category.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bcbfc52",
+   "metadata": {},
+   "source": [
+    "## Merge orders_product_category and customer on customer_id\n",
+    "return order_id, customer_id, product_id, price, product_category, customer_city, customer_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bccaea16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_dataset_2 = orders_product_category.merge(customer, how = 'left', on = 'customer_id')\n",
+    "final_dataset_2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdc2c400",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Null values\n",
+    "final_dataset.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b131eb00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Filtering columns order_id, state, product_category_name and price\n",
+    "\n",
+    "final_dataset_2 = final_dataset_2.loc[:, ['order_id', 'customer_state', 'product_category_name', 'price']]\n",
+    "## rename column customer_state\n",
+    "final_dataset_2.rename(columns = {'customer_state' : 'state'}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "044f12bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_dataset_2.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69af2a45",
+   "metadata": {},
+   "source": [
+    "## Number of nodes and links estimation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17bde362",
+   "metadata": {},
+   "source": [
+    "### Number of nodes\n",
+    "\n",
+    "        * number of orders + number of states + number of produc_category_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca52f928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_orders = len(final_dataset_2.order_id.unique())\n",
+    "n_states = len(final_dataset_2.state)\n",
+    "n_product_category_name = len(final_dataset_2.product_category_name)\n",
+    "\n",
+    "N = n_orders + n_states + n_product_category_name\n",
+    "\n",
+    "print('Number of nodes (N):', N)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "251c44ae",
+   "metadata": {},
+   "source": [
+    "## Number of links\n",
+    "\n",
+    "* each order has one link to a state\n",
+    "* Grouping final_dataset_2 by state to check the number of links between each state and product_category (each sale has a specific state and product_category_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02cb3f6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped = final_dataset_2.groupby('state')['product_category_name'].count().to_frame()\n",
+    "grouped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1d25dfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_links = len(final_dataset_2.order_id.unique()) + grouped.product_category_name.sum()\n",
+    "print(\"Number of links:\",n_links )"
    ]
   },
   {
